<resources>
    <string name="app_name">AppFerreteria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valInicioFrafment">Inicio</string>
    <string name="valCategoriaFrafment">Categoria</string>
    <string name="valCarritoFrafment">Carrito</string>
    <string name="valCuentaFrafment">Mi Cuenta</string>
    <string name="valProductos">Productos</string>
    <string name="valbtnAgregar">Agregar al carrito</string>
    <string name="valbtnDetalle">Detalle</string>
    <string name="valbtnRegresar">Regresar</string>
    <string name="valusuario">Ingrese su Usuario</string>
    <string name="btnlogin">Ingresar</string>
    <string name="btnregistrar">Registrar</string>
    <string name="etpasword" />
    <string name="etpassword">Ingrese su Contraseña</string>
    <string name="etcontraseña">Ingrese su contraseña</string>
    <string name="valtituloregistro">Registrar Usuario</string>
    <string name="valnombreregistro">Registre su nombre</string>
    <string name="valapepaterno">Apellido Paterno</string>
    <string name="valapematerno">Apellido Materno</string>
    <string name="valdni">dni</string>
    <string name="valdireccion">dirección</string>
    <string name="valfechadenacimiento">fecha de nacimiento</string>
    <string name="btnregistrarse">REGISTRARSE</string>
    <string name="btnirlogin">REGRESAR AL LOGIN</string>
    <string name="valcorreo">correo electronico</string>
    <string name="valcelular">Ingrese su Celular</string>
    <string name="valetusuario">Usuario</string>
    <string name="valetcontraseña">Contraseña</string>
    <string name="btnregistro">REGISTRARSE</string>
    <string name="valsexo">Genero</string>
    <string name="valtelefono">Telefonó</string>
    <string name="etcontrasena">Ingrese su contraseña</string>
    <string name="btnactualizar">Actualizar</string>
    <string name="btnsalir">Salir</string>
    <string name="btnfemenino">F</string>
    <string name="btnmasculino">M</string>
    <string name="title_activity_cuenta">Cuenta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_usuario">UsuarioActivity</string>


</resources>